<resources>
    <string name="app_name">Musicabinet</string>

    <!-- General resources -->
    <string name="loading">Loading…</string>
    <string name="test_payments_token">eyJ2ZXJzaW9uIjoyLCJhdXRob3JpemF0aW9uRmluZ2VycHJpbnQiOiJmNmYzNzRjNmQ5OWNjZDMwM2Y0NjZmY2YwMTA4YjJjZTI3ZmE2MzgyNGVmNmFmNTJkNGQ0NWZlOTVlMTc0NjcyfGNyZWF0ZWRfYXQ9MjAxNy0xMi0wNlQwOToxNzoyNS45NjQyMzk4NjQrMDAwMFx1MDAyNm1lcmNoYW50X2lkPTM0OHBrOWNnZjNiZ3l3MmJcdTAwMjZwdWJsaWNfa2V5PTJuMjQ3ZHY4OWJxOXZtcHIiLCJjb25maWdVcmwiOiJodHRwczovL2FwaS5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tOjQ0My9tZXJjaGFudHMvMzQ4cGs5Y2dmM2JneXcyYi9jbGllbnRfYXBpL3YxL2NvbmZpZ3VyYXRpb24iLCJjaGFsbGVuZ2VzIjpbXSwiZW52aXJvbm1lbnQiOiJzYW5kYm94IiwiY2xpZW50QXBpVXJsIjoiaHR0cHM6Ly9hcGkuc2FuZGJveC5icmFpbnRyZWVnYXRld2F5LmNvbTo0NDMvbWVyY2hhbnRzLzM0OHBrOWNnZjNiZ3l3MmIvY2xpZW50X2FwaSIsImFzc2V0c1VybCI6Imh0dHBzOi8vYXNzZXRzLmJyYWludHJlZWdhdGV3YXkuY29tIiwiYXV0aFVybCI6Imh0dHBzOi8vYXV0aC52ZW5tby5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tIiwiYW5hbHl0aWNzIjp7InVybCI6Imh0dHBzOi8vY2xpZW50LWFuYWx5dGljcy5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tLzM0OHBrOWNnZjNiZ3l3MmIifSwidGhyZWVEU2VjdXJlRW5hYmxlZCI6dHJ1ZSwicGF5cGFsRW5hYmxlZCI6dHJ1ZSwicGF5cGFsIjp7ImRpc3BsYXlOYW1lIjoiQWNtZSBXaWRnZXRzLCBMdGQuIChTYW5kYm94KSIsImNsaWVudElkIjpudWxsLCJwcml2YWN5VXJsIjoiaHR0cDovL2V4YW1wbGUuY29tL3BwIiwidXNlckFncmVlbWVudFVybCI6Imh0dHA6Ly9leGFtcGxlLmNvbS90b3MiLCJiYXNlVXJsIjoiaHR0cHM6Ly9hc3NldHMuYnJhaW50cmVlZ2F0ZXdheS5jb20iLCJhc3NldHNVcmwiOiJodHRwczovL2NoZWNrb3V0LnBheXBhbC5jb20iLCJkaXJlY3RCYXNlVXJsIjpudWxsLCJhbGxvd0h0dHAiOnRydWUsImVudmlyb25tZW50Tm9OZXR3b3JrIjp0cnVlLCJlbnZpcm9ubWVudCI6Im9mZmxpbmUiLCJ1bnZldHRlZE1lcmNoYW50IjpmYWxzZSwiYnJhaW50cmVlQ2xpZW50SWQiOiJtYXN0ZXJjbGllbnQzIiwiYmlsbGluZ0FncmVlbWVudHNFbmFibGVkIjp0cnVlLCJtZXJjaGFudEFjY291bnRJZCI6ImFjbWV3aWRnZXRzbHRkc2FuZGJveCIsImN1cnJlbmN5SXNvQ29kZSI6IlVTRCJ9LCJtZXJjaGFudElkIjoiMzQ4cGs5Y2dmM2JneXcyYiIsInZlbm1vIjoib2ZmIn0=</string>
    <string name="internal_error">Internal error, please try later</string>

    <!-- Resources for SlideMenu -->
    <string name="education">Education</string>
    <string name="home">Home</string>
    <string name="musicabinet">Musicabinet</string>
    <string name="virtual_institute">virtual institute</string>
    <string name="my_account">My account</string>
    <string name="log_out">Log out</string>

    <!-- Resources for HomeScreen -->
    <string name="how_to_use">How to use</string>
    <string name="error_loading_home_video">Error during loading home video</string>
    <string name="error_loading_home_news">Error during loading home news</string>
    <string name="error_loading_home_tutorial">Error during loading home tutorial</string>
    <string name="error_open_video">There are no application for open video</string>
    <string name="news_tab">News</string>
    <string name="tutorial_tab">Tutorial</string>

    <!-- Resources for InstrumentScreen -->
    <string name="select_instrument">Select the instrument</string>
    <string name="error_loading_instrument_list">Error during loading instrument list</string>
    <string name="instrument_not_available">Sorry, instrument is temporarily unavailable</string>


    <!-- Resources for CabinetScreen -->
    <string name="enter_email_hint">Enter your e-mail</string>
    <string name="next">Next</string>
    <string name="sign_in_text">Use email or social profile to sign in</string>
    <string name="create_new_account"><a href="">Create a New Account</a></string>
    <string name="email_tab">Email</string>
    <string name="social_profile_tab">Social profile</string>


    <!-- Resources for SignUpUserScreen -->
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="personal_data_text">Enter your personal data</string>
    <string name="email_error">Not valid email</string>


    <!-- Resources for SignUpPasswordScreen -->
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_mismatch_error">Password mismatch error</string>


    <!-- Resources for SignUpFinishScreen -->
    <string name="thanks_for_registration">Thanks for \nregistration</string>
    <string name="check_email">Check your email to activate \naccount</string>
    <string name="enter_my_cabinet">enter to my cabinet</string>


    <!-- Resources for CabinetPasswordScreen -->
    <string name="enter_password">Enter your password</string>
    <string name="miss_password"><a href="">I don\'t know my password</a></string>
    <string name="wrong_password_error">Wrong password error</string>


    <!-- Resources for ChangePasswordScreen -->
    <string name="send">Send</string>
    <string name="email_change_text">Enter your email, we\'ll send you a link to \nchange your password</string>
    <string name="email_not_exist_error">Email don\'t exist in system</string>


    <!-- Resources for SuccessChangePasswordScreen -->
    <string name="check_your_email">Check your email</string>
    <string name="send_recovery_email">We sent a recovery email</string>


    <!-- Resources for CoursesActivity -->
    <string name="courses">Courses</string>
    <string name="courses_error">Error during loading courses</string>
    <string name="courses_buy">Buy all just for $%s</string>


    <!-- Resources for LessonListActivity-->
    <string name="price_buy">buy $%.2f</string>


    <!-- Resources for DialogLessonSelect -->
    <string name="choose_lesson">Choose lesson</string>


    <!-- Resources for LessonActivity -->
    <string name="lesson_tab">Lesson</string>
    <string name="method_tab">Method</string>
    <string name="video_for_lesson">Video for the lesson</string>
    <string name="sound_drums">Drums</string>
    <string name="sound_bass">Bass</string>
    <string name="sound_keys">Keys</string>


    <!-- Resources for LessonInformationActivity -->
    <string name="lesson_information_title">Lesson information</string>
    <string name="page">page %s</string>


    <!-- Resources for Metronome -->
    <string name="metronome">Metronome</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
